--- a/.github/workflows/stg-deploy.yml
+++ b/.github/workflows/stg-deploy.yml
@@ -55,7 +55,7 @@ jobs:
             [{
                 "id": "github",
                 "username": "${{ secrets.USERNAME_GITHUB }}",
-                "password": "${{ secrets.ACCESS_TOKEN }}",
+                "password": "${{ secrets.ACCESS_TOKEN }}"
             }]
       - name: Install with Maven
         run: mvn clean install
