--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
             <url>https://maven.pkg.github.com/giovannilamarmora/utils</url>
         </repository>
     </distributionManagement>
-    
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -78,6 +78,16 @@
             <version>1.6.4</version>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/giovannilamarmora/utils</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
