--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,13 @@
         <java.version>11</java.version>
     </properties>
 
-    <distributionManagement>
-        <repository>
-            <id>github</id>
-            <name>GitHub Giovanni Lamarmora Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/giovannilamarmora/utils</url>
-        </repository>
-    </distributionManagement>
+    <!--    <distributionManagement>
+            <repository>
+                <id>github</id>
+                <name>GitHub Giovanni Lamarmora Apache Maven Packages</name>
+                <url>https://maven.pkg.github.com/giovannilamarmora/utils</url>
+            </repository>
+        </distributionManagement>-->
 
     <dependencies>
         <dependency>
@@ -78,6 +78,34 @@
             <version>1.6.4</version>
         </dependency>
     </dependencies>
+    <profiles>
+        <profile>
+            <id>github</id>
+            <repositories>
+                <repository>
+                    <id>central</id>
+                    <url>https://repo1.maven.org/maven2</url>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                </repository>
+                <repository>
+                    <id>github</id>
+                    <name>GitHub Giovanni Lamarmora Apache Maven Packages</name>
+                    <url>https://maven.pkg.github.com/giovannilamarmora/utils</url>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                </repository>
+            </repositories>
+        </profile>
+    </profiles>
 
     <!--<repositories>
         <repository>
