--- a/.github/workflows/stg-deploy.yml
+++ b/.github/workflows/stg-deploy.yml
@@ -46,9 +46,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: '11'
-          distribution: 'adopt'
+          #distribution: 'adopt'
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-          settings-path: ${{ github.workspace }} # location for the settings.xml file
+          #settings-path: ${{ github.workspace }} # location for the settings.xml file
           server-username: GITHUB_USER_REF  # env variable name for username
           server-password: GITHUB_TOKEN_REF # env variable name for GitHub Personal Access Token
       #- uses: s4u/maven-settings-action@v2.7.0
