--- a/.github/workflows/stg-deploy.yml
+++ b/.github/workflows/stg-deploy.yml
@@ -43,23 +43,20 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: '11'
-          #distribution: 'adopt'
-          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+          distribution: 'adopt'
+          #server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
           #settings-path: ${{ github.workspace }} # location for the settings.xml file
-          server-username: GITHUB_USER_REF  # env variable name for username
-          server-password: GITHUB_TOKEN_REF # env variable name for GitHub Personal Access Token
+          #server-username: GITHUB_USER_REF  # env variable name for username
+          #server-password: GITHUB_TOKEN_REF # env variable name for GitHub Personal Access Token
       #- uses: s4u/maven-settings-action@v2.7.0
       #  with:
       #    servers: '[{"id": "github", "username": "${GITHUB_USERNAME}", "password": "${GITHUB_TOKEN_REF}"}]'
       #    githubServer: false
       - name: Install with Maven
-        run: mvn -U clean install
-        env:
-          GITHUB_USER_REF: ${{ secrets.USERNAME_GITHUB }}
-          GITHUB_TOKEN_REF: ${{ secrets.ACCESS_TOKEN }}
+        run: mvn -s $GITHUB_WORKSPACE/.github/workflows/settings.xml clean install
 
   test:
     name: 📂 Test
