--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
         </dependency>
     </dependencies>
 
-    <!--<repositories>
+    <repositories>
         <repository>
             <id>github</id>
             <name>GitHub Giovanni Lamarmora Apache Maven Packages</name>
@@ -87,7 +87,7 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
-    </repositories>-->
+    </repositories>
 
     <build>
         <plugins>
