--- a/.github/workflows/stg-deploy.yml
+++ b/.github/workflows/stg-deploy.yml
@@ -39,6 +39,11 @@ jobs:
   install:
     name: 🌱 Install
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      actions: write
+      repository-projects: write
+      packages: write
     needs: [ setting-up, java ]
     steps:
       - uses: actions/checkout@v3
@@ -47,8 +52,8 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
-          #server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-          #settings-path: ${{ github.workspace }} # location for the settings.xml file
+          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+          settings-path: ${{ github.workspace }} # location for the settings.xml file
           #server-username: GITHUB_USER_REF  # env variable name for username
           #server-password: GITHUB_TOKEN_REF # env variable name for GitHub Personal Access Token
       - uses: s4u/maven-settings-action@v2.7.0
