--- a/.github/workflows/stg-deploy.yml
+++ b/.github/workflows/stg-deploy.yml
@@ -64,8 +64,8 @@ jobs:
           servers: '[{ "id": "github", "username": "giovannilamarmora", "password": "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" }]'
           output_file: .m2/settings.xml
       - name: Install with Maven
-        #run: mvn -X -s $GITHUB_WORKSPACE/.github/workflows/settings.xml clean install
-        run: mvn -X clean install
+        run: mvn -X -s /home/runner/work/email-sender/email-sender/.m2/settings.xml clean install
+        #run: mvn -X clean install
         env:
           GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
           API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
