--- a/.github/workflows/stg-deploy.yml
+++ b/.github/workflows/stg-deploy.yml
@@ -63,10 +63,10 @@ jobs:
           plugin_repositories: '[{ "id": "github", "url": "https://maven.pkg.github.com/giovannilamarmora/utils" }]'
           servers: '[{ "id": "github", "username": "giovannilamarmora", "password": "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" }]'
           output_file: .m2/settings.xml
-        run: mvn -X -s /home/runner/work/email-sender/email-sender/.m2/settings.xml clean install
       - name: Install with Maven
-        run: mvn -X -s /home/runner/work/email-sender/email-sender/.m2/settings.xml clean install
+        #run: mvn -X -s /home/runner/work/email-sender/email-sender/.m2/settings.xml clean install
         #run: mvn -X clean install
+        run: mvn -B package --file pom.xml
         env:
           GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
           API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
