--- a/.github/workflows/stg-deploy.yml
+++ b/.github/workflows/stg-deploy.yml
@@ -56,12 +56,16 @@ jobs:
           #settings-path: ${{ github.workspace }} # location for the settings.xml file
           #server-username: GITHUB_USERNAME  # env variable name for username
           #server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
+      - name: Set up Maven
+        uses: stCarolas/setup-maven@v4.5
+        with:
+          maven-version: 3.8.2
       - name: maven-settings-xml-action
         uses: whelk-io/maven-settings-xml-action@v20
         with:
-          repositories: [ { "id": "central", "url": "https://repo1.maven.org/maven2" } ]
-          plugin_repositories: [ { "id": "github", "url": "https://maven.pkg.github.com/giovannilamarmora/utils" } ]
-          servers: [ { "id": "github", "username": "giovannilamarmora", "password": "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" } ]
+          repositories: '[{ "id": "central", "url": "https://repo1.maven.org/maven2" }]'
+          plugin_repositories: '[{ "id": "github", "url": "https://maven.pkg.github.com/giovannilamarmora/utils" }]'
+          servers: '[{ "id": "github", "username": "giovannilamarmora", "password": "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" }]'
           output_file: .m2/settings.xml
       - name: Install with Maven
         #run: mvn -X -s /home/runner/work/email-sender/email-sender/.m2/settings.xml clean install
