--- a/.github/workflows/stg-deploy.yml
+++ b/.github/workflows/stg-deploy.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Install with Maven
         #run: mvn -X -s /home/runner/work/email-sender/email-sender/.m2/settings.xml clean install
         #run: mvn -X clean install
-        run: mvn -B package --file pom.xml
+        run: mvn -s /home/runner/work/email-sender/email-sender/.m2/settings.xml -B package --file pom.xml
         env:
           GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
           API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
