--- a/.github/workflows/stg-deploy.yml
+++ b/.github/workflows/stg-deploy.yml
@@ -60,17 +60,16 @@ jobs:
         uses: stCarolas/setup-maven@v4.5
         with:
           maven-version: 3.8.2
-      - name: maven-settings-xml-action
+      - name: Setup settings-xml
         uses: whelk-io/maven-settings-xml-action@v20
         with:
           repositories: '[{ "id": "central", "url": "https://repo1.maven.org/maven2" }]'
           plugin_repositories: '[{ "id": "github", "url": "https://maven.pkg.github.com/giovannilamarmora/utils" }]'
-          servers: '[{ "id": "github", "username": "giovannilamarmora", "password": "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" }]'
+          servers: '[{ "id": "github", "username": "${GITHUB_USERNAME}", "password": "${API_TOKEN_GITHUB}" }]'
           output_file: .m2/settings.xml
       - name: Install with Maven
         #run: mvn -X -s /home/runner/work/email-sender/email-sender/.m2/settings.xml clean install
-        #run: mvn -X clean install
-        run: mvn -s /home/runner/work/email-sender/email-sender/.m2/settings.xml -B package --file pom.xml
+        run: mvn -X clean install
         env:
           GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
           API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
