--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,13 @@
             <groupId>com.github.giovannilamarmora.utils</groupId>
             <artifactId>utils-code</artifactId>
             <version>0.1.7</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/resources/packages/utils-code-0.1.7.jar</systemPath>
+            <!-- <scope>system</scope> -->
+            <!--<systemPath>${project.basedir}/src/main/resources/packages/utils-code-0.1.7.jar</systemPath>-->
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.7</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -85,7 +90,7 @@
         </dependency>
     </dependencies>
 
-    <repositories>
+    <!--<repositories>
         <repository>
             <id>github</id>
             <name>GitHub Giovanni Lamarmora Apache Maven Packages</name>
@@ -94,7 +99,7 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
-    </repositories>
+    </repositories>-->
 
     <build>
         <plugins>
