--- a/.github/workflows/stg-deploy.yml
+++ b/.github/workflows/stg-deploy.yml
@@ -52,10 +52,10 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
-          #server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
           #settings-path: ${{ github.workspace }} # location for the settings.xml file
-          #server-username: GITHUB_USERNAME  # env variable name for username
-          #server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
+          server-username: GITHUB_USERNAME  # env variable name for username
+          server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
       - name: Set up Maven
         uses: stCarolas/setup-maven@v4.5
         with:
@@ -68,8 +68,8 @@ jobs:
           servers: '[{ "id": "github", "username": "${GITHUB_USERNAME}", "password": "${API_TOKEN_GITHUB}" }]'
           output_file: .m2/settings.xml
       - name: Install with Maven
-        run: mvn -X -s /home/runner/work/email-sender/email-sender/.m2/settings.xml clean install
-        #run: mvn -X clean install
+        #run: mvn -X -s /home/runner/work/email-sender/email-sender/.m2/settings.xml clean install
+        run: mvn -X clean install
         env:
           GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
           API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
