--- a/.github/workflows/stg-deploy.yml
+++ b/.github/workflows/stg-deploy.yml
@@ -56,17 +56,13 @@ jobs:
           #settings-path: ${{ github.workspace }} # location for the settings.xml file
           server-username: GITHUB_USERNAME  # env variable name for username
           server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
-      - name: Set up Maven
-        uses: stCarolas/setup-maven@v4.5
-        with:
-          maven-version: 3.8.2
-      - name: Setup settings-xml
-        uses: whelk-io/maven-settings-xml-action@v20
-        with:
-          repositories: '[{ "id": "central", "url": "https://repo1.maven.org/maven2" }]'
-          plugin_repositories: '[{ "id": "github", "url": "https://maven.pkg.github.com/giovannilamarmora/utils" }]'
-          servers: '[{ "id": "github", "username": "${GITHUB_USERNAME}", "password": "${API_TOKEN_GITHUB}" }]'
-          output_file: .m2/settings.xml
+      #- name: Setup settings-xml
+      #  uses: whelk-io/maven-settings-xml-action@v20
+      #  with:
+      #    repositories: '[{ "id": "central", "url": "https://repo1.maven.org/maven2" }]'
+      #    plugin_repositories: '[{ "id": "github", "url": "https://maven.pkg.github.com/giovannilamarmora/utils" }]'
+      #    servers: '[{ "id": "github", "username": "${GITHUB_USERNAME}", "password": "${API_TOKEN_GITHUB}" }]'
+      #    output_file: .m2/settings.xml
       - name: Install with Maven
         #run: mvn -X -s /home/runner/work/email-sender/email-sender/.m2/settings.xml clean install
         run: mvn -X clean install
@@ -86,9 +82,21 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-          settings-path: ${{ github.workspace }} # location for the settings.xml file
+          #settings-path: ${{ github.workspace }} # location for the settings.xml file
+          server-username: GITHUB_USERNAME  # env variable name for username
+          server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
+      #- name: Setup settings-xml
+      #    uses: whelk-io/maven-settings-xml-action@v20
+      #    with:
+      #      repositories: '[{ "id": "central", "url": "https://repo1.maven.org/maven2" }]'
+      #      plugin_repositories: '[{ "id": "github", "url": "https://maven.pkg.github.com/giovannilamarmora/utils" }]'
+      #      servers: '[{ "id": "github", "username": "${GITHUB_USERNAME}", "password": "${API_TOKEN_GITHUB}" }]'
+      #      output_file: .m2/settings.xml
       - name: Test with Maven
         run: mvn test
+        env:
+          GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
+          API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
 
   build:
     name: 📂 Build
@@ -102,9 +110,22 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-          settings-path: ${{ github.workspace }} # location for the settings.xml file
+          #settings-path: ${{ github.workspace }} # location for the settings.xml file
+          server-username: GITHUB_USERNAME  # env variable name for username
+          server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
+      #- name: Setup settings-xml
+      #    uses: whelk-io/maven-settings-xml-action@v20
+      #    with:
+      #      repositories: '[{ "id": "central", "url": "https://repo1.maven.org/maven2" }]'
+      #      plugin_repositories: '[{ "id": "github", "url": "https://maven.pkg.github.com/giovannilamarmora/utils" }]'
+      #      servers: '[{ "id": "github", "username": "${GITHUB_USERNAME}", "password": "${API_TOKEN_GITHUB}" }]'
+      #      output_file: .m2/settings.xml
       - name: Build with Maven
+        #run: mvn -s /home/runner/work/email-sender/email-sender/.m2/settings.xml -B package --file pom.xml
         run: mvn -B package --file pom.xml
+        env:
+          GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
+          API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
 
   deploy:
     name: 🚀 Deploy
