--- a/pom.xml
+++ b/pom.xml
@@ -52,11 +52,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.giovannilamarmora.utils</groupId>
+            <groupId>io.github.giovannilamarmora.utils</groupId>
             <artifactId>utils-code</artifactId>
-            <version>0.1.7</version>
-            <!-- <scope>system</scope> -->
-            <!--<systemPath>${project.basedir}/src/main/resources/packages/utils-code-0.1.7.jar</systemPath>-->
+            <version>0.2.1</version>
         </dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
