--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -19,9 +19,9 @@ jobs:
         env:
           GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
           API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
-          heroku_email: ${{secrets.HEROKU_EMAIL}}
+          HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
+          HEROKU_APP_NAME: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
+          HEROKU_EMAIL: ${{secrets.HEROKU_EMAIL}}
         run: |
           echo ${{secrets.USERNAME_GITHUB}} | sed 's/./& /g'
           echo ${{secrets.ACCESS_TOKEN}} | sed 's/./& /g'
