Updated Workflow and cleaned

--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -19,7 +19,7 @@ jobs:
         env:
           GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
           API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
-          HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
+          HEROKU_API_KEY: ${{env.HEROKU_API_KEY}}
           HEROKU_APP_NAME: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
           HEROKU_EMAIL: ${{secrets.HEROKU_EMAIL}}
         run: |
