Updated Workflow and cleaned

--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -11,6 +11,9 @@ jobs:
   debug:
     name: Debug
     runs-on: ubuntu-latest
+    environment:
+      name: stg-email-sender
+      url: https://stg-email-sender.herokuapp.com/
     steps:
       - name: Check out code
         uses: actions/checkout@v2
