--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -18,17 +18,6 @@ jobs:
   setting-up:
     name: ☁️ Setting Up
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-      - name: 🚀 Setting Up Deployment Package
-        run: echo Process Started!!!
-
-  java:
-    name: 🔧 Java 11
-    runs-on: ubuntu-latest
     environment:
       name: stg-email-sender
     permissions:
@@ -36,15 +25,28 @@ jobs:
       packages: write
 
     steps:
+      - name: 🚀 Setting Up Deployment Package
+        run: echo Process Started!!!
+        env:
+          GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
+          API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
+          HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
+          HEROKU_APP_NAME: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
+          HEROKU_EMAIL: ${{secrets.HEROKU_EMAIL}}
+
+  java:
+    name: 🔧 Java 11
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
       - uses: actions/checkout@v3
       - name: 🔧 Set up JDK 11
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'adopt'
-        env:
-          GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
-          API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
 
   install:
     name: 🌱 Install
