--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -47,21 +47,24 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
+          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+          server-username: GITHUB_USERNAME  # env variable name for username
+          server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
 
   install:
     name: 🌱 Install
     runs-on: ubuntu-latest
     needs: [ setting-up, java ]
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-          server-username: GITHUB_USERNAME  # env variable name for username
-          server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
+      #- uses: actions/checkout@v3
+      #- name: Set up JDK 11
+      #  uses: actions/setup-java@v3
+      #  with:
+      #    java-version: '11'
+      #    distribution: 'adopt'
+      #    server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+      #    server-username: GITHUB_USERNAME  # env variable name for username
+      #    server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
       #- name: Setup settings-xml
       #  uses: whelk-io/maven-settings-xml-action@v20
       #  with:
@@ -78,15 +81,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ install, java ]
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-          server-username: GITHUB_USERNAME  # env variable name for username
-          server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
+      #- uses: actions/checkout@v3
+      #- name: Set up JDK 11
+      #  uses: actions/setup-java@v3
+      #  with:
+      #    java-version: '11'
+      #    distribution: 'adopt'
+      #    server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+      #    server-username: GITHUB_USERNAME  # env variable name for username
+      #    server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
       - name: 📂 Test with Maven
         run: mvn test
         #env:
@@ -98,17 +101,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ test, java ]
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-          server-username: GITHUB_USERNAME  # env variable name for username
-          server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
+      #- uses: actions/checkout@v3
+      #- name: Set up JDK 11
+      #  uses: actions/setup-java@v3
+      #  with:
+      #    java-version: '11'
+      #    distribution: 'adopt'
+      #    server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+      #    server-username: GITHUB_USERNAME  # env variable name for username
+      #    server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
       - name: Build with Maven
         run: mvn -B package --file pom.xml
-        #env:
-        #  GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
-        #  API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
